--- a/CustomCalendar/MainWindow.xaml
+++ b/CustomCalendar/MainWindow.xaml
@@ -1,12 +1,49 @@
 ﻿<Window x:Class="CustomCalendar.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions"  
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CustomCalendar" xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
+        ContentRendered="Window_ContentRendered"
+        xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
         Title="MainWindow" Height="450" Width="1200">
+    <Window.CommandBindings>
+        
+    </Window.CommandBindings>
     <Window.Resources>
+        <ControlTemplate x:Key="wer">
+            <StackPanel>
+
+                <TextBlock  FontSize="14" Text="{Binding .,StringFormat='d MMM'}" Language="ru-RU" VerticalAlignment="Top"  Name="p" HorizontalAlignment="Left"></TextBlock>
+                <ScrollViewer   VerticalScrollBarVisibility="Auto"  MaxHeight="70">
+                    <!--<local:UserControl1 MouseDoubleClick="UserControl1_MouseDoubleClick" ></local:UserControl1>-->
+                    <!--<Button MouseDoubleClick="UserControl1_MouseDoubleClick" Content="fdg" ></Button>-->
+                    <ItemsControl x:Name="PART_Items" ItemsSource="{Binding ElementName=p,Path=Text}">
+                        <ItemsControl.ItemTemplate>
+                            <DataTemplate>
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition MaxWidth="5" />
+                                        <ColumnDefinition/>
+                                    </Grid.ColumnDefinitions>
+                                    <Label Background="LightBlue"></Label>
+                                    <Grid Grid.Column="1">
+                                        <StackPanel>
+                                            <Button MouseLeftButtonUp="Button_MouseLeftButtonUp" 
+                                   Content="{Binding . ,StringFormat='Имя Задачи {0}'}">
+                                            </Button>
+                                          
+                            </StackPanel>
+                        </Grid>
+                    </Grid>
+                </DataTemplate>
+            </ItemsControl.ItemTemplate>
+        </ItemsControl>
+                </ScrollViewer>
+            </StackPanel>
+        </ControlTemplate>
         <local:DateTimeToDateConverter x:Key="r"></local:DateTimeToDateConverter>
         <local:Class1 x:Key="w"></local:Class1>
 
@@ -15,43 +52,9 @@
             <Setter Property="Height" Value="Auto"></Setter>
             
             <Setter Property="Width" Value="Auto"></Setter>
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate>
-                        
-                        <Border BorderBrush="SteelBlue" BorderThickness=" 0.5 1 0 1" Width="auto" MinHeight="120" MinWidth="140" Height="auto">
-                            
-                            <StackPanel>
-                                <TextBlock   FontSize="14" Text="{Binding .,StringFormat='d MMM'}" Language="ru-RU" VerticalAlignment="Top"  Name="p" HorizontalAlignment="Left"></TextBlock>
-                                <ScrollViewer  VerticalScrollBarVisibility="Auto"  MaxHeight="100">
-                                    <!--<ItemsControl ItemsSource="{Binding ElementName=p,Path=Text}">-->
-
-                                        <ItemsControl x:Name="asd" ItemsSource="{Binding ElementName=p,Path=Text}">
-                                        <ItemsControl.ItemTemplate>
-                                            <DataTemplate>
-                                                <Grid>
-                                                    <Grid.ColumnDefinitions>
-                                                        <ColumnDefinition MaxWidth="5" />
-                                                        <ColumnDefinition/>
-                                                    </Grid.ColumnDefinitions>
-                                                    <Label Background="LightBlue"></Label>
-                                                    <Grid Grid.Column="1">
-                                                        <StackPanel>
-                                                            <TextBlock Text="{Binding . ,StringFormat='Имя Задачи {0}'}"></TextBlock>
-                                                            <!--<TextBlock FontSize="12" Margin="0 0 0 0" Text="{Binding}"></TextBlock>-->
-
-                                                        </StackPanel>
-                                                    </Grid>
-                                                </Grid>
-                                            </DataTemplate>
-                                        </ItemsControl.ItemTemplate>
-                                    </ItemsControl>
-                                   
-                                </ScrollViewer>
-                            </StackPanel>
-                        </Border>
-                    </ControlTemplate>
-                </Setter.Value>
+            
+            <Setter Property="Template" Value="{StaticResource wer}">
+               
             </Setter>
             
         </Style>
@@ -73,7 +76,7 @@
                      
                         <Grid x:Name="PART_Root">
                             
-                            <Border  BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" CornerRadius="1">
+                            <Border x:Name="PART_Border" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" CornerRadius="1">
                                 <ScrollViewer  Height="400" >
                                     <Border  BorderThickness="2" CornerRadius="1">
                                         <Grid>
@@ -152,7 +155,8 @@
         </Style>
     </Window.Resources>
     <Grid>
-        <Calendar CalendarItemStyle="{StaticResource  s}" CalendarDayButtonStyle="{StaticResource StyleCalanderDayButton}">
+        
+        <Calendar x:Name="Cal" CalendarItemStyle="{StaticResource  s}" CalendarDayButtonStyle="{StaticResource StyleCalanderDayButton}">
 
 
         </Calendar>
